opa/security-policy/cpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-non-root
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 1000
