opa/security-policy/vpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-root
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 0
