opa/security-policy/constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowRootUser
metadata:
  name: disallow-root-user
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
